generation/assets/style/_page_project_details_documentation.sass
@import "variables"

@import "node_modules/foundation-sites/scss/foundation"

$tomitribe-p-size: $tribe-font-size

table
  // foundation table styles
  width: 100%

img
  max-width: 100%
  height: auto

pre
  $line_height: 1
  font-family: courier, monospace
  font-size: 15px
  line-height: $line_height
  padding: 20px
  background-color: $tomitribe-lightergray
  *
    font-family: courier, monospace
    font-size: 15px
    line-height: $line_height

  .pl-c
    color: #969896

  .pl-c1, .pl-s .pl-v
    color: #0086b3

  .pl-e, .pl-en
    color: #795da3

  .pl-s .pl-s1, .pl-smi
    color: #333

  .pl-ent
    color: #63a35c

  .pl-k
    color: #a71d5d

  .pl-pds, .pl-s, .pl-s .pl-pse .pl-s1, .pl-sr, .pl-sr .pl-cce, .pl-sr .pl-sra, .pl-sr .pl-sre
    color: #183691

  .pl-v
    color: #ed6a43

  .pl-id
    color: #b52a1d

  .pl-ii
    background-color: #b52a1d
    color: #f8f8f8

  .pl-sr .pl-cce
    color: #63a35c
    font-weight: bold

  .pl-ml
    color: #693a17

  .pl-mh, .pl-mh .pl-en, .pl-ms
    color: #1d3e81
    font-weight: bold

  .pl-mq
    color: #008080

  .pl-mi
    color: #333
    font-style: italic

  .pl-mb
    color: #333
    font-weight: bold

  .pl-md
    background-color: #ffecec
    color: #bd2c00

  .pl-mi1
    background-color: #eaffea
    color: #55a532

  .pl-mdr
    color: #795da3
    font-weight: bold

  .pl-mo
    color: #1d3e81

*
  font-size: $tomitribe-p-size

h1
  border-bottom: solid $tomitribe-lightergray 2px

h1, h2, h3, h4, h5, h6
  margin: 10px 0 10px 0

li
  p, code
    margin: 0

div.admonitionblock
  margin: 0 0 10px 0
  > table
    width: 100%
    td
      padding: 10px
      border: solid $tomitribe-lightergray 2px
      div.title
        text-align: center
      &:first-child
        border-right: 0
        background-color: $tomitribe-lightergray

p, div.listingblock
  margin: 0 0 20px 0

h1
  font-size: $tomitribe-p-size * 2.5

h2
  font-size: $tomitribe-p-size * 1.8

h3
  font-size: $tomitribe-p-size * 1.3

h4
  font-size: $tomitribe-p-size * 1.1

h5
  font-size: $tomitribe-p-size * 1.1

h6
  font-size: $tomitribe-p-size * 1.1

a
  text-decoration: none
  color: $tomitribe-orange
  &:hover
    text-decoration: underline

a, code
  word-break: break-all

div.tribe-project-share
  display: flex
  justify-content: center
  margin: 20px 0 20px 0
  background: url("../images/twitter-bg.jpg")
  color: $tomitribe-white
  padding: 40px 0 40px 0
  *
    color: $tomitribe-white
    margin: 0
  h1
    font-size: $tomitribe-p-size * 2
    border-bottom: none
  h2
    font-size: $tomitribe-p-size * 1.5
  div:last-child
    margin-left: 20px
    display: flex
    align-items: center
    > a
      &:hover
        text-decoration: none
      margin-left: 10px
      span
        font-size: $tomitribe-p-size * .8
      > *
        margin-left: 5px
        &:first-child
          margin-left: 0

code
  background-color: transparent
  border-color: transparent
  line-height: 1.2
  padding-left: 0

